# ClassicArcade

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  PR.md  README.md  audio.py  classic-arcade.spec  config.py  engine.py  highscore_snake.json  main.py  menu_items.py  pyproject.toml  requirements-dev.txt  rthook_assets.py  settings.json  sound_latency_test.py  tmp_config_description.txt  utils.py
.githooks/: post-merge  pre-commit
.github/workflows/: ci.yml  nightly-release.yml
.worklog/: worklog-data.jsonl
assets/: Pong_bat_hit.wav:Zone.Identifier
assets/sounds/: game_over.wav:Zone.Identifier  game_over_2.wav:Zone.Identifier  high_score_fanfare.wav:Zone.Identifier  level_complete.wav:Zone.Identifier  music.mp3:Zone.Identifier  placeholder.wav:Zone.Identifier  sound-effect-for-a-hard-rubber-ball-hitting-a-wooden-bat-in-the-classic-1980's-breakout-game.-_020526.mp3:Zone.Identifier  space_invaders_enemy_shoot.wav:Zone.Identifier  space_invaders_player_shoot.wav:Zone.Identifier
classic_arcade/: __init__.py  audio.py  config.py  constants.py  difficulty.py  engine.py  main.py  menu_items.py  utils.py
games/: __init__.py  breakout.py  dummy_game.py  game_base.py  highscore.py  pong.py  run_helper.py  settings.py  snake.py  space_invaders.py  splash.py  tetris.py
games/breakout/: __init__.py  breakout.py
games/pong/: __init__.py  pong.py
games/snake/: __init__.py  snake.py
games/space_invaders/: __init__.py  space_invaders.py
games/space_invaders_redux/: __init__.py  alien_base.py  alien_loader.py  level_loader.py  space_invaders_redux.py
games/tetris/: __init__.py  tetris.py
mods/blue_wave/: __init__.py  level.yaml
mods/default/: __init__.py  level.yaml
mods/green_sniper/: __init__.py  level.yaml
scripts/: install-git-hooks.sh
tests/: __init__.py  test_audio.py  test_audio_helpers.py  test_audio_preload.py  test_breakout_inheritance.py  test_breakout_sound.py  test_config.py  test_difficulty_scaling.py  test_discover_games.py  test_docstrings_and_type_hints.py  test_engine.py  test_engine_quit_cleanup.py  test_game_esc_transitions.py  test_games.py  test_help_screen.py  test_highscore.py  test_menu_highlight.py  test_music.py  test_mute_ui.py  test_pause_functionality.py  test_pong_state.py  test_snake_powerups.py  test_space_invaders_shelters.py  test_space_invaders_shooting.py  test_splash_state.py  test_tetris_sound.py
