[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classic-arcade"
version = "0.1.0"
description = "Classic Arcade Suite (Pygame)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rogardle"}]
dependencies = ["pygame>=2.0"]

[project.scripts]
classic-arcade = "main:main"

[project.optional-dependencies]
dev = [
    "PyInstaller>=6.0",
    "build>=0.10.0",
    "pytest>=7.0",
]

[tool.setuptools]
# Include the top-level module `main.py` as a py_module so the console script
# entry point `main:main` can be imported after installation.
py-modules = ["main", "audio", "engine", "config", "menu_items", "utils"]

[tool.setuptools.packages.find]
# Only discover python packages under the `games` package to avoid picking up
# non-python top-level directories (e.g. assets).
include = ["games*"]

[tool.setuptools.package-data]
# Include all data files from the games package
"games" = ["**/*.wav", "**/*.mp3", "**/*.ogg", "**/*.png", "**/*.jpg", "**/*.gif"]
